enable npm publish workflow

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,4 +1,4 @@
-name: simplemap-ts-utility
+name: 'CI Build & Publish'
 
 on:
     push:
@@ -12,10 +12,15 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
 
+            - name: Setup .npmrc
+              run: echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
+
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
                   node-version: 16
+                  cache: 'npm'
+                  registry-url: 'https://registry.npmjs.org'
 
             - name: Install dependencies
               run: npm ci
@@ -33,10 +38,15 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
 
+            - name: Setup .npmrc
+              run: echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
+
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
                   node-version: 16
+                  cache: 'npm'
+                  registry-url: 'https://registry.npmjs.org'
 
             - name: Install dependencies
               run: npm ci
@@ -44,7 +54,10 @@ jobs:
             - name: Build TypeScript project with Webpack
               run: npm run build
 
+            - name: Clean npm cache
+              run: npm cache clean --force
+
             - name: Publish to npm
               run: npm publish
               env:
-                  NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
