--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,9 +1,8 @@
 name: 'CI Build & Publish'
 
 on:
-    push:
-        branches:
-            - main
+    release:
+        types: [published]
 
 jobs:
     build:
