--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -34,6 +34,6 @@ jobs:
               run: npm cache clean --force
 
             - name: Publish to npm
-              run: npm publish
+              run: npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
