--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -27,6 +27,9 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
+            - name: Run Unit Tests
+              run: npm test
+
             - name: Build TypeScript project with Webpack
               run: npm run build
 
