--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "SimpleMap Typescript Utility Module",
     "name": "simplemap-ts-utility",
     "author": "Heshan Kithuldora",
@@ -14,9 +14,12 @@
         "build:dev": "webpack --mode=development",
         "deploy": "webpack --mode=development",
         "watch": "webpack --watch",
-        "start": "webpack serve"
+        "start": "webpack serve",
+        "test": "jest"
     },
     "devDependencies": {
+        "@swc/core": "^1.4.8",
+        "@types/jest": "^29.5.12",
         "@typescript-eslint/eslint-plugin": "^7.1.1",
         "@typescript-eslint/parser": "^7.1.1",
         "@webpack-cli/generators": "^3.0.7",
@@ -25,19 +28,24 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "html-webpack-plugin": "^5.6.0",
+        "jest": "^29.7.0",
         "prettier": "^3.2.5",
         "sass": "^1.71.1",
         "sass-loader": "^14.1.1",
         "style-loader": "^3.3.4",
+        "ts-jest": "^29.1.2",
         "ts-loader": "^9.5.1",
+        "tsup": "^8.0.2",
         "typescript": "^5.3.3",
         "webpack": "^5.90.3",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^5.0.2",
-        "@swc/core": "^1.4.8",
-        "tsup": "^8.0.2"
+        "webpack-dev-server": "^5.0.2"
     },
     "publishConfig": {
         "@heshansw:registry": "https://npm.pkg.github.com"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node"
     }
 }
