--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@swc/core": "^1.4.8",
         "@types/jest": "^29.5.12",
+        "@types/jsdom": "^21.1.6",
         "@typescript-eslint/eslint-plugin": "^7.1.1",
         "@typescript-eslint/parser": "^7.1.1",
         "@webpack-cli/generators": "^3.0.7",
@@ -29,6 +30,7 @@
         "eslint-plugin-prettier": "^5.1.3",
         "html-webpack-plugin": "^5.6.0",
         "jest": "^29.7.0",
+        "jsdom": "^24.0.0",
         "prettier": "^3.2.5",
         "sass": "^1.71.1",
         "sass-loader": "^14.1.1",
