--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "jest": {
         "preset": "ts-jest",
         "testEnvironment": "node"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/heshansw/simplemap"
     }
 }
